bk_ida/gccida/c3/warning_for_asm
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/warning_for_asm/src/rtl-error.c:574:47: error: expected expression
diagnostic_for_asm( insn, msgid, ( va_list_0 *)ap, 1); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/warning_for_asm/src/rtl-error.c:574:36: error: use of undeclared identifier 'va_list_0'
diagnostic_for_asm( insn, msgid, ( va_list_0 *)ap, 1); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/warning_for_asm/src/obj/rtl-error.o] Error 1
